version 1.2.0
- add "rename" command (rename a variable)
- add "printf" command for generating formatted output
- "delete" command: add the ability to delete a specific
  variable, identified by its number
- Make principal components analysis available via the GUI
- When adding a variable to the dataset from a model window,
  give the user a chance to edit the name and description
- Windows: add option to emulate Windows look (via WIMP)
- add "--no-restore-data" to R invocation
- Fix for launching R from gretl on Windows XP
- Improve creation of time-series datasets for use in R
- Fix problems created by tabs in the command line
- Two-stage least squares: add list of instruments to printout
  of model results
- Improve the mechanism for detecting the presence of a lagged
  dependent variable in a regression list; also show the
  Durbin-Watson stat in addition to Durbin's h when a 
  regression includes a lagged dependent variable
- Fix bug in graph editing for non-English locales
- genr command: add facility for using date strings in boolean
  comparisons, e.g. "genr dummy = t > 1973:4" will work for 
  quarterly data
- Allow '#' comments in loop constructions
- sim command: allow omission of starting and ending observations, 
  to simulate over the full sample range; also allow the use
  of a minus sign to get the negative of a variable
- VARs: add facility to separate deterministic terms such as 
  trend and dummies from the other variables in the regression 
  list; add Durbin-Watson statistic to model printouts; add 
  impulse responses and variance decompositions
- Improvements to data-editing spreadsheet in gtk-2.0 version
- New, improved dialogs for setting the sample range and sub-
  sampling using a dummy variable
- Add color selection to the graph editing dialog and improve
  the mechanism for selecting a graph font (only applies if 
  gnuplot has the "new" PNG driver, i.e. gnuplot 3.8)
- minor fixes to the build process